# s2t

./: .env.example  .gitignore  README.md  pyproject.toml
data/: manifest.example.jsonl  manifest.jsonl  manifest_aug.jsonl
results/gemma/: gemma_eval.json  gemma_eval.md  gemma_eval_e4b.json  gemma_eval_e4b.md
results/gemma_diag/: gemma_eval_e4b.json  gemma_eval_e4b.md
results/whisper/: whisper_eval.json  whisper_eval.md
results/whisper_aug/: whisper_eval.json  whisper_eval.md
src/s2t_bench/: __init__.py  __main__.py  cli.py  config.py  correction.py  domain.py  main.py  realtime.py  server.py  streaming.py
src/s2t_bench/adk_apps/: __init__.py
src/s2t_bench/adk_apps/benchmark/: agent.py
src/s2t_bench/adk_apps/field/: agent.py
src/s2t_bench/agent/: agent.py  tools.py
src/s2t_bench/benchmark/: dataset.py  metrics.py  runner.py
src/s2t_bench/benchmark_agent/: __init__.py  agent.py  prompt.py  tools.py
src/s2t_bench/benchmark_agent/benchmark_tools/: __init__.py  dataset.py  metrics.py  runner.py
src/s2t_bench/engines/: __init__.py  base.py  faster_whisper_local.py  gemini.py  google_cloud.py  registry.py  whisper_openai.py
src/s2t_bench/eval/: __init__.py  audio_augmentation.py  augmented_breakdown.py  concurrency.py  hardware.py  report.py  whisper_eval.py
src/s2t_bench/eval/gemma/: __init__.py  gemma_eval.py  ollama_client.py  samples.py  schema.py  scorer.py
src/s2t_bench/field_agent/: agent.py  tools.py
src/s2t_bench/web/: index.html  recorder-worklet.js
tests/: test_eval.py  test_field_pipeline.py  test_metrics.py  test_realtime.py  test_server.py
