[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s2t-bench"
version = "0.1.0"
description = "Pluggable speech-to-text benchmarking (Google, Whisper, on-prem) with a Google ADK agent front-end."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    # Core stays light; heavy SDKs live in optional extras below.
    "jiwer>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
google = [
    "google-cloud-speech>=2.26",
    "google-genai>=1.0",
]
whisper = [
    "openai>=1.30",
]
local = [
    "faster-whisper>=1.0",
    "soundfile>=0.12",
]
eval = [
    "psutil>=5.9",
]
stream = [
    "sounddevice>=0.4",
    "webrtcvad-wheels>=2.0.14",
    "setuptools>=68",  # webrtcvad imports pkg_resources; absent in py3.12+ venvs
    "numpy>=1.24",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
agent = [
    "google-adk>=2.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
all = [
    "google-cloud-speech>=2.26",
    "google-genai>=1.0",
    "openai>=1.30",
    "faster-whisper>=1.0",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "webrtcvad-wheels>=2.0.14",
    "setuptools>=68",
    "numpy>=1.24",
    "psutil>=5.9",
    "google-adk>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
s2t-bench = "s2t_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/s2t_bench"]

[tool.hatch.build.targets.wheel.force-include]
"src/s2t_bench/web" = "s2t_bench/web"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
